--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1pFNSdNSCthaF0ak8tP85",
+      "authorship_tag": "ABX9TyMPKnLVxdrcBuw3+ZhcEz6R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,6 +91,7 @@
         }
       ],
       "source": [
+        "# P1\n",
         "from matplotlib import pyplot\n",
         "import torch as t\n",
         "from torch.autograd import Variable\n",
@@ -146,6 +147,179 @@
         "pyplot.scatter(x1,p_i)\n",
         "pyplot.scatter(x1,res)\n",
         "pyplot.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# P2\n",
+        "## USING THE TUTORIAL CODE https://thuijskens.github.io/2016/12/29/bayesian-optimisation/\n",
+        "\n",
+        "import numpy as np\n",
+        "import sklearn.gaussian_process as gp\n",
+        "\n",
+        "from scipy.stats import norm\n",
+        "from scipy.optimize import minimize\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.datasets import make_classification\n",
+        "\n",
+        "# EXPECTED IMPROVEMENT function.\n",
+        "\n",
+        "def expected_improvement(x, gaussian_process, evaluated_loss, greater_is_better=False, n_params=1):\n",
+        "\n",
+        "    x_to_predict = x.reshape(-1, n_params)\n",
+        "\n",
+        "    mu, sigma = gaussian_process.predict(x_to_predict, return_std=True)\n",
+        "\n",
+        "    if greater_is_better:\n",
+        "        loss_optimum = np.max(evaluated_loss)\n",
+        "    else:\n",
+        "        loss_optimum = np.min(evaluated_loss)\n",
+        "\n",
+        "    scaling_factor = (-1) ** (not greater_is_better)\n",
+        "\n",
+        "    # In case sigma equals zero\n",
+        "    with np.errstate(divide='ignore'):\n",
+        "        Z = scaling_factor * (mu - loss_optimum) / sigma\n",
+        "        expected_improvement = scaling_factor * (mu - loss_optimum) * norm.cdf(Z) + sigma * norm.pdf(Z)\n",
+        "        expected_improvement[sigma == 0.0] == 0.0\n",
+        "\n",
+        "    return -1 * expected_improvement\n",
+        "\n",
+        "# SAMPLE NEXT HYPERPARAMETER function.\n",
+        "\n",
+        "def sample_next_hyperparameter(acquisition_func, gaussian_process, evaluated_loss, greater_is_better=False,\n",
+        "                               bounds=(0, 10), n_restarts=25):\n",
+        "    best_x = None\n",
+        "    best_acquisition_value = 1\n",
+        "    n_params = bounds.shape[0]\n",
+        "\n",
+        "    for starting_point in np.random.uniform(bounds[:, 0], bounds[:, 1], size=(n_restarts, n_params)):\n",
+        "\n",
+        "        res = minimize(fun=acquisition_func,\n",
+        "                       x0=starting_point.reshape(1, -1),\n",
+        "                       bounds=bounds,\n",
+        "                       method='L-BFGS-B',\n",
+        "                       args=(gaussian_process, evaluated_loss, greater_is_better, n_params))\n",
+        "\n",
+        "        if res.fun < best_acquisition_value:\n",
+        "            best_acquisition_value = res.fun\n",
+        "            best_x = res.x\n",
+        "\n",
+        "    return best_x\n",
+        "\n",
+        "\n",
+        "#%% And then finally, the BAYESIAN OPTIMIZATION function.\n",
+        "\n",
+        "def bayesian_optimisation(n_iters, sample_loss, bounds, x0=None, n_pre_samples=5,\n",
+        "                          gp_params=None, random_search=False, alpha=1e-5, epsilon=1e-7):\n",
+        "\n",
+        "    x_list = []\n",
+        "    y_list = []\n",
+        "\n",
+        "    n_params = bounds.shape[0]\n",
+        "\n",
+        "    if x0 is None:\n",
+        "        for params in np.random.uniform(bounds[:, 0], bounds[:, 1], (n_pre_samples, bounds.shape[0])):\n",
+        "            x_list.append(params)\n",
+        "            y_list.append(sample_loss(params))\n",
+        "    else:\n",
+        "        for params in x0:\n",
+        "            x_list.append(params)\n",
+        "            y_list.append(sample_loss(params))\n",
+        "\n",
+        "    xp = np.array(x_list)\n",
+        "    yp = np.array(y_list)\n",
+        "\n",
+        "    # Create the GP\n",
+        "    if gp_params is not None:\n",
+        "        model = gp.GaussianProcessRegressor(**gp_params)\n",
+        "    else:\n",
+        "        kernel = gp.kernels.Matern()\n",
+        "        model = gp.GaussianProcessRegressor(kernel=kernel,\n",
+        "                                            alpha=alpha,\n",
+        "                                            n_restarts_optimizer=10,\n",
+        "                                            normalize_y=True)\n",
+        "\n",
+        "    for n in range(n_iters):\n",
+        "\n",
+        "        model.fit(xp, yp)\n",
+        "\n",
+        "        # Sample next hyperparameter\n",
+        "        if random_search:\n",
+        "            x_random = np.random.uniform(bounds[:, 0], bounds[:, 1], size=(random_search, n_params))\n",
+        "            ei = -1 * expected_improvement(x_random, model, yp, greater_is_better=True, n_params=n_params)\n",
+        "            next_sample = x_random[np.argmax(ei), :]\n",
+        "        else:\n",
+        "            next_sample = sample_next_hyperparameter(expected_improvement, model, yp, greater_is_better=True, bounds=bounds, n_restarts=100)\n",
+        "\n",
+        "        # Duplicates will break the GP. In case of a duplicate, we will randomly sample a next query point.\n",
+        "        if np.any(np.abs(next_sample - xp) <= epsilon):\n",
+        "            next_sample = np.random.uniform(bounds[:, 0], bounds[:, 1], bounds.shape[0])\n",
+        "\n",
+        "        # Sample loss for new set of parameters\n",
+        "        cv_score = sample_loss(next_sample)\n",
+        "\n",
+        "        # Update lists\n",
+        "        x_list.append(next_sample)\n",
+        "        y_list.append(cv_score)\n",
+        "\n",
+        "        # Update xp and yp\n",
+        "        xp = np.array(x_list)\n",
+        "        yp = np.array(y_list)\n",
+        "\n",
+        "    return xp, yp\n",
+        "\n",
+        "# Our loss function. AKA OBJECTIVE FUNCTION!!!!\n",
+        "def sample_loss(x): # takes in a vector [x1,x2]\n",
+        "    x1=x[0]\n",
+        "    x2=x[1]\n",
+        "    return -1*((4 - 2.1*x1**2 + (x1**4)/3)*x1**2 + x1*x2 + (-4 + 4*(x2**2))*x2**2)\n",
+        "# Start runnin...'\n",
+        "x_1 = np.linspace(-3,3)\n",
+        "x_2 = np.linspace(-2,2)\n",
+        "\n",
+        "# We need the cartesian combination of these two vectors\n",
+        "param_grid = np.array([[x1i, x2i] for x1i in x_1 for x2i in x_2])\n",
+        "\n",
+        "real_loss = [sample_loss(params) for params in param_grid]\n",
+        "\n",
+        "# The maximum is at:\n",
+        "print('The true minimum value of ' + str(-np.amax(real_loss)) +' is at '+ str(param_grid[np.array(real_loss).argmax(), :]))\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')  # Let's ignore the warnings.\n",
+        "\n",
+        "bounds = np.array([[-3, 3], [-2, 2]])\n",
+        "\n",
+        "print('running Bayesian Opt.')\n",
+        "\n",
+        "xp, yp = bayesian_optimisation(n_iters=100, # HERE WE GO!\n",
+        "                               sample_loss=sample_loss,\n",
+        "                               bounds=bounds,\n",
+        "                               n_pre_samples=3,\n",
+        "                               random_search=100000)\n",
+        "\n",
+        "print('Out of 100 iterations, the minimum value of ' + str(-np.amax(yp)) +' is at ' + str(xp[np.where(yp == np.amax(yp))[0][0]]))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qzX_SXfzuY4G",
+        "outputId": "584a9d32-4f6f-43cb-d5b1-89ba8492f7c8"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The true minimum value of -1.02614400718987 is at [-0.06122449  0.69387755]\n",
+            "running Bayesian Opt.\n",
+            "Out of 100 iterations, the minimum value of -1.0296330960524334 is at [-0.10531847  0.72492799]\n"
+          ]
+        }
       ]
     }
   ]
